force-app/main/default/objects/Exit_Details__c/Exit_Details__c.object-meta.xml
<CustomObject>
    <label>Exit Detail</label>
    <nameField>
        <displayFormat>ED-{0000}</displayFormat>
        <label>Exit Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exit Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>