force-app/main/default/objects/Exit_Details__c/fields/Asset_submitted__c.field-meta.xml
<CustomField>
    <fullName>Asset_submitted__c</fullName>
    <label>Asset submitted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>