force-app/main/default/objects/Exit_Details__c/fields/Date_of_resignation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_resignation__c</fullName>
    <label>Date of resignation</label>
    <type>Date</type>
</CustomField>