force-app/main/default/objects/Exit_Details__c/fields/Eligible_to_rehire__c.field-meta.xml
<CustomField>
    <fullName>Eligible_to_rehire__c</fullName>
    <label>Eligible to rehire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>