force-app/main/default/objects/Exit_Details__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Exit Details</relationshipLabel>
    <relationshipName>Exit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>