force-app/main/default/objects/Exit_Details__c/fields/Last_working_date__c.field-meta.xml
<CustomField>
    <fullName>Last_working_date__c</fullName>
    <label>Last working date</label>
    <type>Date</type>
</CustomField>