force-app/main/default/objects/Exit_Details__c/fields/Reason_for_exit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_exit__c</fullName>
    <label>Reason for exit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>