force-app/main/default/objects/Exit_Details__c/fields/Status_of_Exit_Interview__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Exit_Interview__c</fullName>
    <label>Status of Exit Interview</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>