force-app/main/default/objects/Exit_Details__c/fields/Type_of_exit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_exit__c</fullName>
    <label>Type of exit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resignation</fullName>
            </value>
            <value>
                <fullName>Voluntary</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>